holiday service clean code

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 # App configuration
-# Define the output directory of employees_day_off job
-org.holiday.employees_day_off.output.dir=/Users/simon/Documents/temp
+# Define the output directory of employees_day_off job, otherwise system temp dir will be used
+# org.holiday.employees_day_off.output.dir=
 
 # DataSource configuration for PG
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
@@ -23,10 +23,10 @@ spring.batch.jdbc.initialize-schema=always
 
 # slf4j + logback level configuration
 logging.level.root=INFO
-#logging.level.org.springframework.batch=DEBUG
-# logging.level.org.hibernate.SQL=TRACE
-# logging.level.org.springframework.transaction=TRACE
-# logging.level.org.springframework.data=TRACE
-# logging.level.org.springframework.orm=TRACE
+logging.level.org.springframework.batch=DEBUG
+logging.level.org.hibernate.SQL=TRACE
+logging.level.org.springframework.transaction=TRACE
+logging.level.org.springframework.data=TRACE
+logging.level.org.springframework.orm=TRACE
 #logging.level.org.springframework.security=TRACE
 #logging.level.org.springframework.security.access.prepost.PrePostAnnotationSecurityMetadataSource=INFO
