--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -6,9 +6,9 @@ spring.datasource.url=jdbc:h2:mem:db;DB_CLOSE_DELAY=-1
 spring.datasource.username=sa
 spring.datasource.password=sa
 
-#logging.level.org.hibernate.SQL=TRACE
-#logging.level.org.springframework.transaction=TRACE
-#logging.level.org.springframework.data=TRACE
-#logging.level.org.springframework.orm=TRACE
+logging.level.org.hibernate.SQL=TRACE
+logging.level.org.springframework.transaction=TRACE
+logging.level.org.springframework.data=TRACE
+logging.level.org.springframework.orm=TRACE
 #logging.level.org.springframework.security=TRACE
 #logging.level.org.springframework.security.access.prepost.PrePostAnnotationSecurityMetadataSource=INFO
