domain fix replace / remove balance

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,11 +22,12 @@ spring.jpa.hibernate.ddl-auto=create
 spring.batch.jdbc.initialize-schema=always
 
 # slf4j + logback level configuration
-logging.level.root=INFO
-logging.level.org.springframework.batch=DEBUG
-logging.level.org.hibernate.SQL=TRACE
-logging.level.org.springframework.transaction=TRACE
-logging.level.org.springframework.data=TRACE
-logging.level.org.springframework.orm=TRACE
-#logging.level.org.springframework.security=TRACE
+logging.level.org.holiday=DEBUG
+logging.level.root=WARN
+logging.level.org.springframework.batch=WARN
+logging.level.org.hibernate.SQL=WARN
+logging.level.org.springframework.transaction=WARN
+logging.level.org.springframework.data=WARN
+logging.level.org.springframework.orm=WARN
+logging.level.org.springframework.security=WARN
 #logging.level.org.springframework.security.access.prepost.PrePostAnnotationSecurityMetadataSource=INFO
