--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -1,14 +1,20 @@
 
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.H2Dialect
 
+# DB_CLOSE_DELAY=-1 keeps the in memory database open
+# while running integration tests
+# Otherwise, by default it loses all the previous data
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.url=jdbc:h2:mem:db;DB_CLOSE_DELAY=-1
 spring.datasource.username=sa
 spring.datasource.password=sa
 
-logging.level.org.hibernate.SQL=TRACE
-logging.level.org.springframework.transaction=TRACE
-logging.level.org.springframework.data=TRACE
-logging.level.org.springframework.orm=TRACE
+spring.main.banner-mode=off
+
+logging.level.root=WARN
+#logging.level.org.hibernate.SQL=TRACE
+#logging.level.org.springframework.transaction=TRACE
+#logging.level.org.springframework.data=TRACE
+#logging.level.org.springframework.orm=TRACE
 #logging.level.org.springframework.security=TRACE
 #logging.level.org.springframework.security.access.prepost.PrePostAnnotationSecurityMetadataSource=INFO
