holiday service test controller (+ mockito usage)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 # App configuration
 # Define the output directory of employees_day_off job, otherwise system temp dir will be used
-# org.holiday.employees_day_off.output.dir=
+org.holiday.employees_day_off.output.dir=/Users/simon/Documents/temp
 
 # DataSource configuration for PG
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
